More 1.20.1 changes