@@ -60,7 +60,7 @@ class CustomerCraftedOfferAssignmentTest {
                 );
 
         assertNull(remainder);
-        assertEquals(25, crafted.getFirst().getCount());
+        assertEquals(25, crafted.get(0).getCount());
     }
 
     /** Returns only the quantity beyond matching customer demand. */
@@ -76,7 +76,7 @@ class CustomerCraftedOfferAssignmentTest {
                 );
 
         assertEquals(5, remainder.getCount());
-        assertEquals(15, crafted.getFirst().getCount());
+        assertEquals(15, crafted.get(0).getCount());
     }
 
     /** Prevents repeated deposits from exceeding the offered quantity. */
@@ -106,7 +106,7 @@ class CustomerCraftedOfferAssignmentTest {
                         extra
                 )
         );
-        assertEquals(10, crafted.getFirst().getCount());
+        assertEquals(10, crafted.get(0).getCount());
     }
 
     /** Combines demand from multiple active offers for the same item. */
@@ -126,7 +126,7 @@ class CustomerCraftedOfferAssignmentTest {
                 );
 
         assertEquals(3, remainder.getCount());
-        assertEquals(15, crafted.getFirst().getCount());
+        assertEquals(15, crafted.get(0).getCount());
     }
 
     /** Previews only outstanding demand without mutating assigned quantities. */
@@ -143,7 +143,7 @@ class CustomerCraftedOfferAssignmentTest {
                 );
 
         assertEquals(6, assignable);
-        assertEquals(4, crafted.getFirst().getCount());
+        assertEquals(4, crafted.get(0).getCount());
     }
 
     @Test
@@ -159,7 +159,7 @@ class CustomerCraftedOfferAssignmentTest {
                 );
 
         assertEquals(6, released);
-        assertEquals(4, crafted.getFirst().getCount());
+        assertEquals(4, crafted.get(0).getCount());
         assertEquals(3, crafted.get(1).getCount());
     }
 
@@ -198,7 +198,7 @@ class CustomerCraftedOfferAssignmentTest {
         assertEquals(5, servedCount);
         assertTrue(offer.isOutOfStock());
         assertEquals(1, crafted.size());
-        assertEquals(Items.APPLE, crafted.getFirst().getItem());
+        assertEquals(Items.APPLE, crafted.get(0).getItem());
         assertTrue(tradedPlayers.contains(crafterId));
     }
     /** Uses the offer's component predicate when matching crafted items. */
